Modified mock client

--- a/Generic Camera Server/html/index.html
+++ b/Generic Camera Server/html/index.html
@@ -162,7 +162,7 @@
 		-->
 	</div>
 	<br/>
-	<div style="border-radius: 25px;border: 2px solid aquamarine;padding:10px;margin:10px;">
+	<div style="border-radius: 25px;border: 2px solid aquamarine;padding:10px;margin:10px;float:left;">
 		<h2><span>Livestream</span></h2>
 		<div id="videoframes"></div>
 	<br/>
