--- a/x64/Release/html/index.html
+++ b/x64/Release/html/index.html
@@ -43,23 +43,7 @@
 		}
 	</style>
 	<body>
-	
-	
 	<h1>Camera Platform Server Mock UI</h1>
-	
-
-	<div class="box">
-		<h2><span>Livestream</span></h2>
-		<div id="videoframes"></div>
-	<br/>
-		<h2><span>Photos</span></h2>
-		<div id="photos"></div>
-	<br/>
-		<h2><span>Log</span></h2>
-		<div id="result"></div>
-	</div>
-	
-	
 	<div>
 		<div class="box">
 			<h2><span>Webcam Control</span></h2>
@@ -178,7 +162,17 @@
 		-->
 	</div>
 	<br/>
-	
+	<!--<div style="border-radius: 25px;border: 2px solid aquamarine;padding:10px;margin:10px;float:left;">-->
+	<div class="box">
+		<h2><span>Livestream</span></h2>
+		<div id="videoframes"></div>
+	<br/>
+		<h2><span>Photos</span></h2>
+		<div id="photos"></div>
+	<br/>
+		<h2><span>Log</span></h2>
+		<div id="result"></div>
+	</div>
 	<script>
 		var g_connection;			
 		var u = document.URL;
